--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "version": 2,
     "builds": [
-      { "src": "deploy/app.py", "use": "@vercel/python" }
+      { "src": "./deploy/app.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "deploy/app.py" }
+      { "src": "/(.*)", "dest": "./deploy/app.py" }
     ]
   }
